--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "swiper": "^10.2.0",
     "web-vitals": "^2.1.4"
   },
